--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://saralotfi.github.io",
-  "name": "portfolio",
+  "homepage": "https://saralotfi.github.io/portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
