Update homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.sarawoodsdesign.com/",
+  "homepage": "https://sara-woods.github.io/portfolio-new/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
